--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
                         <span class="hello">Hello, I'm</span>
                         <h3 class="name">Ali Nour Eldin</h3>
                         <p class="text">An AI Rechercher and Engineering based In Grenoble, France</p>
+                        <span>Last update: 01/09/2024</span>
                         <!-- <div class="iknow_tm_button">
                             <a href="https://drive.google.com/file/d/1ed4YLeysIHt8vsjqap6pk0b-gOF9X6V7/view?usp=sharing"
                                 download>Download CV</a>
